--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.0.0-next.7",
     "@angular/platform-browser-dynamic": "~12.0.0-next.7",
     "@angular/router": "~12.0.0-next.7",
+    "bootstrap": "^3.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
